Changes after review 	- renamed @alternate-border-color into @border-color-inverse (was the last "alernate" color) 	- fixed default.less alignment 	- renamed @input-active-bg into @input-number-handler-active-bg

--- a/components/date-picker/style/Calendar.less
+++ b/components/date-picker/style/Calendar.less
@@ -86,7 +86,7 @@
   position: relative;
   outline: none;
   width: 280px;
-  border: @border-width-base @border-style-base @alternate-border-color;
+  border: @border-width-base @border-style-base @border-color-inverse;
   list-style: none;
   font-size: @font-size-base;
   text-align: left;
