--- a/components/input-number/style/index.less
+++ b/components/input-number/style/index.less
@@ -26,7 +26,7 @@
     width: 100%;
     font-weight: bold;
     &:active {
-      background: @input-active-bg;
+      background: @input-number-handler-active-bg;
     }
     &:hover &-up-inner,
     &:hover &-down-inner {
